<resources>
    <string name="app_name">ReUseIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_email_here">Enter Email Here...</string>
    <string name="enter_password_here">Enter Password Here...</string>
    <string name="do_login">DO LOGIN</string>
    <string name="go_to_register">Go To Register</string>
    <string name="registretion_step_1">Registretion Step 1</string>
    <string name="next">Next</string>
    <string name="registretion_step_2">Registretion Step 2</string>
    <string name="enter_name_here">Enter Name here...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="do_register">Register</string>
    <string name="my_profile">My Profile</string>
    <string name="this_is_my_email">This is My Email</string>
    <string name="logout">Logout</string>
    <string name="age">Age</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dad">dad</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="reuseit">REUSEIT</string>
    <string name="new_post">New Post</string>

    <string name="full_name">Full Name</string>
    <string name="address_street_and_number">Address Street and Number</string>
    <string name="post_title">Post Title</string>
    <string name="post_message">Post Message</string>
    <string name="test_http_request">Test Http Request</string>
</resources>